fixed designs container overflow

--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ p {
 
 .designs-ctr {
   padding: 10rem 10%;
-  overflow-y: hidden;
+  overflow: hidden;
   background-color: #fff;
 }
 
